# High_Performance_Technical_Computing

./: CMakeCache.txt  CMakeLists.txt  CrankParallel.cpp  CrankParallel.h  Display.cpp  Display.h  ExplicitUpwindParallel.cpp  ExplicitUpwindParallel.h  ExplicitUpwindScheme.cpp  ExplicitUpwindScheme.h  GeneralScheme.cpp  GeneralScheme.h  HPC_Bednarek.docx  High_Performance_Technical_Computing  High_Performance_Technical_Computing.cbp  ImplicitParallel.cpp  ImplicitParallel.h  ImplicitUpwindScheme.cpp  ImplicitUpwindScheme.h  Lax_Wendroff.cpp  Lax_Wendroff.h  MPI and Cmake configuration (CLion).odt  Makefile  MathFunctions.cpp  MathFunctions.h  Matrix.cpp  Matrix.h  Richtmyer_multi_step.cpp  Richtmyer_multi_step.h  main.cpp
Kod Gosi/: CMakeLists.txt
Kod Gosi/hpc-assignment/: hpc-assignment.sln
Kod Gosi/hpc-assignment/hpc-assignment/: a.out  crank-nicolson (1).cpp  explicit-upwind.cpp  hpc-assignment.vcxproj  hpc-assignment.vcxproj.filters  implicit-upwind.cpp  implicitScheme.csv
Results/: README!  Sign_ExplicitUpwindParallelSchemeResults_t=5_points=10000_CFL=0.xls  Sign_GeneralSchemeResults_t=5_points=10000_CFL=0.xls
Scripts/: AnalitylacExp_t5_p100.m  ExplicitExp.asv  ExplicitExp.m  ExplicitParallel.m  ExplicitSign.asv  ExplicitSign.m  LaxWendroffExp.m  Lax_Wendroff.m  Lax_WendroffSign.m  computional.m  expRicht.m  init.m  signRichtMyer.m  x_points.m
Version working on Astral/: CrankParallel.cpp  CrankParallel.h  Display.cpp  Display.h  ExplicitUpwindParallel.cpp  ExplicitUpwindParallel.h  ExplicitUpwindScheme.cpp  ExplicitUpwindScheme.h  GeneralScheme.cpp  GeneralScheme.h  High_Performance_Technical_Computing  ImplicitParallel.cpp  ImplicitParallel.h  ImplicitUpwindScheme.cpp  ImplicitUpwindScheme.h  MPI_CMP  MathFunctions.cpp  MathFunctions.h  Matrix.cpp  Matrix.h  cmake_install.cmake  hosts  main (kopia).cpp  main.cpp  script.sh
Version working on Astral/Results/: .~lock.Exp_ImplicitUpwindSchemeResults_t=5_points=10000_CFL=0.xls#
